--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
+certifi==2020.4.5.1
+chardet==3.0.4
 click==7.1.1
 Flask==1.1.2
 gunicorn==20.0.4
+idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
+oauthlib==3.1.0
+requests==2.23.0
+requests-oauthlib==1.3.0
+twitter==1.18.0
+urllib3==1.25.8
 Werkzeug==1.0.1
