--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ Jinja2==2.11.1
 MarkupSafe==1.1.1
 oauthlib==3.1.0
 requests==2.23.0
-requests-oauthlib==1.3.0
+requests_oauthlib==1.3.0
 twitter==1.18.0
 urllib3==1.25.8
 Werkzeug==1.0.1
