--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,12 @@ chardet==3.0.4
 click==7.1.1
 Flask==1.1.2
 gunicorn==20.0.4
+httplib2==0.17.2
 idna==2.9
 itsdangerous==1.1.0
 Jinja2==2.11.1
 MarkupSafe==1.1.1
+oauth2==1.9.0.post1
 oauthlib==3.1.0
 requests==2.23.0
 requests-oauthlib==1.3.0
